[project]
name = "anomalous-bet-adjustments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dotenv>=0.9.9",
    "matplotlib>=3.9.4",
    "pandas>=2.3.0",
    "psycopg2-binary>=2.9.10",
    "redshift-connector>=2.1.7",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "sqlalchemy>=2.0.41",
    "sqlalchemy-redshift>=0.7.0",
]
